--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Ignoring files - GitHub Docs
-# https://docs.github.com/en/github/using-git/ignoring-files
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# github/gitignore: A collection of useful .gitignore templates
-https://github.com/github/gitignore
+# testing
+/coverage
 
-[Bb]in/
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
